# alpha-engine

./: .gitignore  CLAUDE.md  DOCS.md  NOTICE  README.md  flow-doctor-eod.yaml  flow-doctor.yaml  pyproject.toml  requirements.txt
config/: risk.yaml.example
executor/: backfill_eod_pnl.py  backfill_uptime.py  config_loader.py  daemon.py  deciders.py  decision_capture.py  emergency_shutdown.py  entry_triggers.py  eod_emailer.py  eod_reconcile.py  health_status.py  ibkr.py  intraday_exit_manager.py  intraday_snapshot.py  liquidate_all.py  log_config.py  main.py  market_hours.py  notifier.py  open_orders_artifact.py  optimizer_shadow.py  order_book.py  order_book_rationale.py  population_reader.py  portfolio_optimizer.py  position_sizer.py  preflight.py  price_cache.py  retry.py  risk_guard.py  signal_generator.py  signal_reader.py  snapshot_capturer.py  technical_scorer.py  trade_logger.py  turnover_tripwire.py  uptime_tracker.py
infrastructure/: add-cron.sh  boot-pull.sh  docker-compose.yml  emit-heartbeat.sh  fetch-ib-secrets.sh  health_checker.sh  reset-portfolio.sh  setup-ec2.sh  setup-eventbridge.sh  setup-trading-ec2.sh  wait-for-ibgateway.sh
scripts/: backfill_eod_pnl_historical_state.py  backfill_eod_pnl_spy.py  backfill_trading_day.py
tests/: conftest.py  test_backfill_eod_pnl.py  test_backfill_uptime.py  test_bracket_orders.py  test_config_loader.py  test_daemon_phase0.py  test_decide_entries_priority_order.py  test_decider_parity.py  test_deciders_risk_events.py  test_decision_capture.py  test_emergency_shutdown.py  test_eod_emailer.py  test_exit_manager.py  (+28 more)
(+22 files in other folders)
