[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-engine-executor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "yfinance>=0.2.50",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["executor*"]

[tool.pytest.ini_options]
# Scope pytest to tests/ only. Without this, default discovery walks the whole
# tree and pulls in executor/connection_test.py (a CLI script matching *_test.py)
# plus any stray nested repo copies, causing sys.path collisions and spurious
# ImportErrors for modules that exist only in the current tree.
testpaths = ["tests"]
